k8s/k8s-backend-green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micheal-back-deployment-green
  labels:
    app: micheal-back-green
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: micheal-back-green
  template:
    metadata:
      labels:
        app: micheal-back-green
    spec:
      volumes:
        - name: aws-credentials-volume
          secret:
            secretName: aws-credentials
        - name: app-credentials-volume
          emptyDir: {}
        - name: app-logs
          emptyDir: {}

      containers:
        - name: micheal-back
          image: amazingatul/ecom-backend:prodv1
          ports:
            - containerPort: 3129
          volumeMounts:
            - name: app-credentials-volume
              mountPath: "/app-credentials"
              readOnly: true
            - name: app-logs
              mountPath: "/var/log/app"
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"

        - name: fluentd-sidecar
          image: fluent/fluentd:v1.17.1-debian-1.1
          volumeMounts:
            - name: app-logs
              mountPath: "/var/log/app"
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
