k8s/scale-test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scale-test
  labels:
    app: scale-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: scale-test
  template:
    metadata:
      labels:
        app: scale-test
    spec:
      containers:
        - name: nginx
          image: nginx
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
