k8s/k8s-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micheal-back-deployment
  labels:
    app: micheal-back
spec:
  replicas: 2
  selector:
    matchLabels:
      app: micheal-back
  template:
    metadata:
      labels:
        app: micheal-back
    spec:
      containers:
        - name: micheal-back
          image: amazingatul/ecom-backend:m2
          imagePullPolicy: Always  
          ports:
            - containerPort: 3129
          resources:
            requests:
              cpu: "0.3"  
              memory: "256Mi"  
            limits:
              cpu: "0.8"  
              memory: "512Mi" 
      restartPolicy: Always  

---
apiVersion: v1
kind: Service
metadata:
  name: micheal-back-service
spec:
  selector:
    app: micheal-back
  ports:
    - protocol: TCP
      port: 3129
      targetPort: 3129
  type: ClusterIP
